MockInterviewPackage/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <label>Feedback</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>