MockInterviewPackage/main/default/objects/Feedback__c/fields/Body_Language__c.field-meta.xml
<CustomField>
    <fullName>Body_Language__c</fullName>
    <label>Body Language</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>