MockInterviewPackage/main/default/objects/Feedback__c/fields/Eye_Contact__c.field-meta.xml
<CustomField>
    <fullName>Eye_Contact__c</fullName>
    <label>Eye Contact</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>