MockInterviewPackage/main/default/objects/Feedback__c/fields/Mock_Interview_Self__c.field-meta.xml
<CustomField>
    <fullName>Mock_Interview_Self__c</fullName>
    <label>Mock Interview Self</label>
    <referenceTo>Mock_Interview_Self__c</referenceTo>
    <relationshipLabel>Feedbacks</relationshipLabel>
    <relationshipName>Feedbacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>